exports[`as a function 1`] = `
"
import dedent from \"../macro\";

dedent(\`
  some stuff
\`);

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`as a template string 1`] = `
"
import dedent from \"../macro\";

dedent\`
  some stuff
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`expressions 1`] = `
"
import dedent from \"../macro\";

dedent\`
  first line
    second
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first line\\n  second\\n  third\";
"
`;

exports[`multiple indentations 1`] = `
"
import dedent from \"../macro\";

dedent\`
    first
      second
          third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first\\n  second\\n      third\";
"
`;
